--- a/FinalReport.Rmd
+++ b/FinalReport.Rmd
@@ -34,8 +34,9 @@ There are a total of 3 datasets that we have and will be working with: Player1, 
 
 Player1 and Player2 data are structured in a similar fashion and contain the same variables so it will be eaisest to observe them at the same time. The columns of these datasets represent match statistics and the rows represent each match the player participated in. These datasets contain the same amount of columns and statistic types, however Player1 has more rows meaning that they played more games than Player2. Each dataset contains 27 columns which is a lot of variables to work with, however a lot of them contain mostly null values so we will only be using a select amount of them. Those variables are: Choice, Result, Eliminations, Deaths, Score, Damage, and TotalXP.
 
-Now for the GameModes dataset, only 3 variables are listed: Mode, ScoreLimit, and TimeLimit. Obviously these variables tell us the score and time limit of each game
-mode. These variables will also be useful to explore each match with the score and time limit for reason of the match concluding.
+Now for the GameModes dataset, only 3 variables are listed: Mode, ScoreLimit, and TimeLimit. Obviously these variables tell us the score and time limit of each game mode. These variables will also be useful to explore each match with the score and time limit for reason of the match concluding.
+
+An important value that sticks out in the GameMode dataset is that the game mode Domination has no time limit. This will be worth noting when answer our EDA question below.
 
 ### 2.2 Exploratory Data Analysis
 
@@ -43,7 +44,7 @@ We can now perform some exploratory data analysis (EDA) to find relationships wi
 
  
 
-To discover which game mode is likely to reach the score limit, some data wrangling must be in order. We first combine the Player1 and Player2 data and add a PlayerID column to the merged dataset. Then, we clean the GameModes set by taking off the game modes that contain HC and combining them with their respective game types. For example, the HC - Kill Confirmed game type will be combined with Kill Confirmed. Figure 1 below displays the count of number of matches for each game mode.TDM (Team Deathmatch) has by far the most number of matches at 537, and Domination the least at 14
+To discover which game mode is likely to reach the score limit, some data wrangling must be in order. We first combine the Player1 and Player2 data and add a PlayerID column to the merged dataset. Then, we clean the GameModes set by taking off the game modes that contain HC and combining them with their respective game types. For example, the HC - Kill Confirmed game type will be combined with Kill Confirmed. We also removed rows with NA values. Figure 1 below displays the count of number of matches for each game mode.TDM (Team Deathmatch) has by far the most number of matches at 474, and Domination the least at 14.
 
 ```{r label = chart1, echo = FALSE, fig.cap = "Count of each Game Mode"}
 remove(list = ls())
@@ -56,6 +57,7 @@ library(readxl)
 library(lubridate)
 library(FNN)
 library(xgboost)
+library(kableExtra)
 CODGameModes <- read.csv("~/Documents/GitHub/stat380finalproject/CODGameModes.csv")
 CODGames1 <- read.csv("~/Documents/GitHub/stat380finalproject/CODGames_p1_380.csv")
 CODGames2 <- read.csv("~/Documents/GitHub/stat380finalproject/CODGames_p2_380.csv")
@@ -147,7 +149,9 @@ y = "Proportion Reaching Score Limit"
 theme_minimal()
 ```
 
-Based on this visual, we can infer that Hardpoint matches are most likely to reach the score limit since every one of their matches have reached the score limit. Kill Confirmed matches are most likely to reach the time limit. It is however important to note that there are only 14 Domination matches in the dataset, so it may not be completely fair to compare this percentage with TDM matches because there are more than 500 additional data points of TDM.
+Based on this visual, we can infer that Domination matches are most likely to reach the score limit since every one of their matches have reached the score limit. This of course makes sense because we pointed out in section 2.1 that Domination matches have no time limit, so matches have to end via score. 
+
+Team Deathmatch (TDM) matches are most likely to end via time limit. However, comparing this percentage with Hardpoint and Kill Confirmed is a bit difficult considering there are so many more TDM matches. If a similar number of matches were played between TDM, Hardpoint, and Kill Confirmed, the comparison in percentage of games ended via score limit might look a bit different.
 
 ### 3 Inference Modeling
 
@@ -184,9 +188,9 @@ Before diving into our predictions for game outcome (win/loss), we must first es
 The variables included in each model were Eliminations, Deaths, and Damage. We decided not to include TotalXP or Score in this model, because our intuition thought that these variables would be affected by winning or losing, meaning that winning increases score or XP, so it is not appropriate to consider these potential confounding variables.
 
 
-### 3.1 k-Nearest Neighbors (kNN)
+### 4.1 k-Nearest Neighbors (kNN)
 
-kNN was used to classify and predict wins and losses based on the variables we decided on (Eliminations, Deaths, and Damage). We created a nearest neighbors model from k values of 1 through 40. We iterated through each value of nearest neighbors and chose the one that yielded the lowest RMSE value. In the end, indicated by Figure 3, k=8 yielded the lowest RMSE at 0.4836806. We can now use this k value to predict result of testing data and compare predicted probability of a win to threshold, creating confusion matrix.
+kNN was used to classify and predict wins and losses based on the variables we decided on (Eliminations, Deaths, and Damage). We created a nearest neighbors model from k values of 1 through 40. We iterated through each value of nearest neighbors and chose the one that yielded the lowest RMSE value. In the end, indicated by Figure 3, k=8 yielded the lowest RMSE at 0.4836806.
 
 ```{r, label = chart3, echo = FALSE, fig.cap = "RMSEs by k Nearest Neighbors"}
 winning_pct <- mean(games_split$Result)
@@ -229,10 +233,10 @@ ggplot(data = temp_df, mapping = aes(x = k, y = rmse)) +
   geom_line() +
   theme_minimal()
 ```
+We can now create our final kNN model using k = 8 to predict the result of testing data to the threshold. As a reminder, predicting testing data will return a value on a scale of 0 to 1, and the true winning percentage of the matches is about 55%. Therefore, predicted results above 0.55 will be considered a win (equivalent to 1 in matrix), and anything below will be considered a loss (equivalent to 0 in matrix). For the confusion matrix below (Table 1- Actual results as columns and Predicted as Rows) we will also calculate the accuracy, precision, specificity, and sensitivity metrics in Table 2.
 
 
-
-```{r}
+```{r, echo = FALSE}
 knn_res8 <- knn.reg(train = Train[ , xvars, drop = FALSE],
                    test = Test[ , xvars, drop = FALSE],
                    y = Train$Result,
@@ -247,22 +251,30 @@ pred_win <- ifelse(pred_prob > threshold, 1, 0)
 
 # Create confusion matrix
 conf_mat <- table(Predicted = pred_win, Actual = Test$Result)
-conf_mat
+kable(conf_mat, caption = "Confusion Matrix for kNN Model")
 ```
 ```{r, echo = FALSE}
 accuracy = (42+50) / (42+50+34+20)
-
-accuracy
-
 precision = 50 / (50 + 20)
-precision
-
 sens <- 50 / (50 + 34)
-sens
-
 spec <- 42 / (42 + 20)
-spec
+
+var_col <- c("Accuracy", "Precision", "Sensitivity", "Specificity")
+val_col <- c(accuracy, precision, sens, spec)
+
+metric_df <- data.frame(
+  Metric = var_col,
+  Value = val_col
+)
+
+kable(metric_df, digits = 3, caption = "Metric Table for kNN Model")
 ```
+
+The kNN model produces an accuracy of about 63%. This certainly is not great, but better than flipping a coin to predict wins and losses. The model is much better at predicting losses than wins, evident in only 20 False Positives (out of 62 total losses) to 34 False Negatives (out of 84 total wins). A potential conclusion we can draw from this is that a poor player performance is more likely to cause a team loss than a good player performance causing a team win, however more information will be needed to support this claim.
+
+Another metric computed for evaluating the model was the Area Under the Curve (AUC) for the model's Receiver Operating Characteristics (ROC) Curve, which connects True Positive Rate and True Negative Rate pairings at each threshold from 0 to 1. The line y = x is plotted to show a curve with an AUC of 0.50, which would represent a 50/50 prediction of win or loss. For this curve, our AUC was 0.659.
+
+
 ```{r, label = chart4, echo = FALSE, fig.cap = "ROC Curve for kNN"}
 thresholds <- seq(1, 0, -0.01)
 TPR_vec <- rep(NA, length(thresholds))
@@ -301,6 +313,7 @@ ggplot(data = roc_df, mapping = aes(x = FPR, y = TPR)) +
   theme_minimal()
 
 roc_df <- roc_df[order(roc_df$FPR), ]
-
-
 ```
+
+
+### 4.2 (ENTER MODEL NAME)
