--- a/FinalReport.Rmd
+++ b/FinalReport.Rmd
@@ -513,3 +513,27 @@ kable(results, digits = 4, align = "lcccc",
 ## 6 AI Statement
 
 All group mates attest to utilizing generative AI (ChatGPT) to assist work throughout the project. AI usage was limited to debugging and not to create entire chunks of code. Each code chunk was created entirely by group members, but certain lines of code were fed into ChatGPT in case code was not outputting as expected, and then the code was modified with AI suggestions. Gen AI was used to assist group work and not to replace it.
+
+## 7 Packages Used
+
+tidyverse — https://cran.r-project.org/package=tidyverse
+
+caret — https://cran.r-project.org/package=caret
+
+pROC — https://cran.r-project.org/package=pROC
+
+ggplot2 — https://cran.r-project.org/package=ggplot2
+
+dplyr — https://cran.r-project.org/package=dplyr
+
+readxl — https://cran.r-project.org/package=readxl
+
+lubridate — https://cran.r-project.org/package=lubridate
+
+FNN — https://cran.r-project.org/package=FNN
+
+xgboost — https://cran.r-project.org/package=xgboost
+
+kableExtra — https://cran.r-project.org/package=kableExtra
+
+randomForest — https://cran.r-project.org/package=randomForest
